Dark mode fixes

--- a/less/dark-mode.less
+++ b/less/dark-mode.less
@@ -37,6 +37,14 @@
   --vetrina-footer-background: #25292b;
   --vetrina-link-color: var(--link-color);
   --vetrina-text-color: var(--text-color);
+
+  body {
+      background-color: black;
+  }
+
+  .article-element__html a:hover {
+      color: #999;
+  }
 }
 
 .theme-hbl-fi,
